Add features to group timeline.  Members timeline shows Group Admin, button to follow/unfollow users, and stay on current page after creating a post

--- a/src/main/webapp/scripts/app/account/groups/list/list.html
+++ b/src/main/webapp/scripts/app/account/groups/list/list.html
@@ -10,7 +10,7 @@
         <tbody class="items">
             <tr ng-repeat="group in userGroups">
                 <td>
-                    <a ui-sref="home.home.group.statuses({ groupId: group.groupId })">{{ group.name }}</a>
+                    <a ui-sref="groupStatus({ groupId: group.groupId })">{{ group.name }}</a>
                 </td>
                 <td>
                     <span ng-show="group.publicGroup && !group.archivedGroup" class="label labelSizeNormal label-warning" translate="account.groups.public"></span>
