--- a/src/main/webapp/scripts/app/home/timeline/group/groupHeader.html
+++ b/src/main/webapp/scripts/app/home/timeline/group/groupHeader.html
@@ -15,7 +15,7 @@
     </ul>
     <section class="tatams-content tatams-margin">
         <div class="tatams-content-title">
-            <h3
+            <h3>
             <strong>{{ group.name }}: </strong>
                 <span ng-if="currentState == 'groupStatus'">
                     <strong ng-if="group.description">{{ group.description }}</strong>
@@ -27,10 +27,10 @@
                             translate-values="{ amount: group.counter }"></strong>
                 </span>
                 <span ng-if="group.administrator">
-                    <button ui-sref="tatami.account.groups.manage({ groupId: group.groupId })"
+                    <button ui-sref="manage({ groupId: group.groupId })"
                             class="pull-right btn btn-sm btn-primary hidden-phone" type="button">
                         <span class="glyphicon glyphicon-th-large"></span>
-                        <span translate="tatami.home.group.manage"></span>
+                        <span translate="home.group.manage"></span>
                     </button>
                 </span>
                 <span ng-if="!group.administrator">
@@ -38,11 +38,11 @@
                             ng-mouseenter="hover = true" ng-mouseleave="hover = false" class="btn btn-sm pull-right"
                             ng-class="{ 'btn-danger': group.member && hover, 'btn-info': group.member && !hover }">
                         <span class="glyphicon" ng-class="group.member ? 'glyphicon-minus' : 'glyphicon-plus'">
-                            <span ng-if="!group.member" class="hidden-phone" translate="tatami.home.group.join"></span>
+                            <span ng-if="!group.member" class="hidden-phone" translate="home.group.join"></span>
                             <span ng-if="group.member && !hover" class="hidden-phone"
-                                  translate="tatami.home.group.joined"></span>
+                                  translate="home.group.joined"></span>
                             <span ng-if="group.member && hover" class="hidden-phone"
-                                  translate="tatami.home.group.leave"></span>
+                                  translate="home.group.leave"></span>
                         </span>
                     </button>
                 </span>
