--- a/src/main/webapp/scripts/app/home/profile/sidebar/profileSidebar.html
+++ b/src/main/webapp/scripts/app/home/profile/sidebar/profileSidebar.html
@@ -7,12 +7,12 @@
         </div>
         <div class="well well-sm little-padding">
             <div>
-                <a class="h3" ui-sref="tatami.home.profile.statuses({ username: user.username })">
+                <a class="h3" ui-sref="profileStatuses({ email: user.username })">
                     <strong>{{ user.firstName + ' ' + user.lastName }}</strong>
                 </a>
             </div>
             <div>
-                <a class="h5 text-muted" ui-sref="tatami.home.profile.statuses({ username: user.username })">
+                <a class="h5 text-muted" ui-sref="profileStatuses({ email: user.username })">
                     @{{ user.username }}
                 </a>
             </div>
