--- a/src/main/webapp/scripts/app/home/timeline/sidebar/homeSidebar.html
+++ b/src/main/webapp/scripts/app/home/timeline/sidebar/homeSidebar.html
@@ -7,12 +7,12 @@
         </div>
         <div class="well well-sm little-padding">
             <div>
-                <a class="h3" ui-sref="home.profile.statuses({ email: profile.email })">
+                <a class="h3" ui-sref="profileStatuses({ email: profile.username })">
                     <strong>{{ profile.firstName + ' ' + profile.lastName }}</strong>
                 </a>
             </div>
             <div>
-                <a class="h5 text-muted" ui-sref="home.profile.statuses({ email: profile.email })">
+                <a class="h5 text-muted" ui-sref="profileStatuses({ email: profile.username })">
                     @{{ profile.username }}
                 </a>
             </div>
@@ -91,16 +91,16 @@
                     <span ng-click="followUser(suggestion, $index)" class="pointer pull-right label" ng-class="{ 'label-info': suggestion.followingUser }">
                         <span class="glyphicon" ng-class="suggestion.followingUser ? 'glyphicon-minus' : 'glyphicon-plus'"></span>
                     </span>
-                    <a ui-sref="home.profile.statuses({ email: suggestion.email })">
+                    <a ui-sref="profileStatuses({ email: profile.username })">
                         <span class='pull-left background-image-fffix'>
                             <img class="img-rounded img-small" ng-style="{ 'background-image': 'url(' + suggestion.avatarURL + ')' }">
                         </span>
                     </a>&nbsp;
-                    <a ui-sref="home.profile.statuses({ email: suggestion.email })">
+                    <a ui-sref="profileStatuses({ email: profile.username })">
                         <strong>{{ suggestion.firstName + ' ' + suggestion.lastName }}</strong>
                     </a>
                     <br>&nbsp;
-                    <a ui-sref="home.profile.statuses({ email: suggestion.email })">
+                    <a ui-sref="profileStatuses({ email: profile.username })">
                         <small>@{{ suggestion.username }}</small>
                     </a>
                 </h6>
