Fixed Google Login

--- a/src/main/webapp/scripts/app/login/login.html
+++ b/src/main/webapp/scripts/app/login/login.html
@@ -1,9 +1,4 @@
-
 <div id="mainPanel" class="container-fluid well well-sm">
-
-   <!-- tried to create a loading spinner, ill get back to this
-   <input type="button" ng-click="startSpin()" value="Start Spin"/>
-    <span us-spinner = "{radius:30, width:8, length: 16}"  spinner-key="spinner-1"></span>-->
     <div class="text-center well well-sm">
         <h1 translate="login.mainTitle"></h1>
         <h3 translate="login.subtitle"></h3>
@@ -19,12 +14,14 @@
                     <form class="form" ng-submit="googleLogin()" method="POST" accept-charset="utf-8">
                         <fieldset>
                             <div class="form-group">
-                                <button type="submit" id="proceed_google" class="btn btn-primary btn-block" formmethod="POST" translate="login.googleApps.login"></button>
+                                <button type="submit" id="proceed_google" class="btn btn-primary btn-block"
+                                        formmethod="POST" translate="login.googleApps.login"></button>
                             </div>
                         </fieldset>
                     </form>
                     <div class="form-group">
-                        <button type="button" class="btn btn-info btn-block little-padding text-center" ui-sref="tos" translate="login.tos"></button>
+                        <button type="button" class="btn btn-info btn-block little-padding text-center" ui-sref="tos"
+                                translate="login.tos"></button>
                     </div>
                     <ul class="list-group">
                         <li class="list-group-item">
@@ -41,47 +38,54 @@
         </div>
 
         <div class="col-md-4">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h1 class="panel-title text-center" translate="login.title"></h1>
-                <div class="alert alert-danger" ng-show="authenticationError" translate="login.messages.error.authentication">
-                    <strong>Failed to sign in!</strong> Please check your credentials and try again.
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h1 class="panel-title text-center" translate="login.title"></h1>
+                    <div class="alert alert-danger" ng-show="authenticationError"
+                         translate="login.messages.error.authentication">
+                        <strong>Failed to sign in!</strong> Please check your credentials and try again.
+                    </div>
+                </div>
+                <div class="panel-body">
+                    <form class="form" role="form" ng-submit="login($event)" accept-charset="utf-8" id="loginForm">
+                        <fieldset>
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="username" ng-model="username"
+                                       required="required" placeholder="{{ 'login.email' | translate }}" autofocus>
+                            </div>
+                            <div class="form-group">
+                                <input type="password" class="form-control" id="password" ng-model="password"
+                                       required="required" placeholder="{{ 'login.password' | translate }}">
+                            </div>
+                            <div class="form-group">
+                                <input id="_spring_security_remember_me" ng-model="rememberMe"
+                                       name="_spring_security_remember_me" type="checkbox">
+                                <span translate="login.remember"></span>
+                            </div>
+                            <button type="submit" id="loginButton" class="btn btn-primary btn-block text-center"
+                                    translate="login.title"></button>
+                        </fieldset>
+                    </form>
                 </div>
             </div>
-            <div class="panel-body">
-                <form class="form" role="form" ng-submit="login($event)" accept-charset="utf-8" id="loginForm">
-                    <fieldset>
-                        <div class="form-group">
-                            <input type="text" class="form-control" id="username" ng-model="username" required="required" placeholder="{{ 'login.email' | translate }}" autofocus>
-                        </div>
-                        <div class="form-group">
-                            <input type="password" class="form-control" id="password" ng-model="password" required="required" placeholder="{{ 'login.password' | translate }}">
-                        </div>
-                        <div class="form-group">
-                            <input id="_spring_security_remember_me" ng-model="rememberMe" name="_spring_security_remember_me" type="checkbox">
-                            <span translate="login.remember"></span>
-                        </div>
-                    <button type="submit" id="loginButton" class="btn btn-primary btn-block text-center" translate="login.title"></button>
-                    </fieldset>
-                </form>
-            </div>
-        </div>
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h4 class="panel-title text-center" translate="login.forgotPassword"></h4>
-        </div>
-        <div class="panel-body">
-            <form ng-submit="resetPassword()" accept-charset="utf-8">
-                <fieldset>
-                    <div class="form-group">
-                        <input class="form-control" ng-model="user.email" name="email" type="email" required="required" placeholder="{{ 'login.email' | translate }}">
-                    </div>
-                    <button type="submit" class="btn btn-primary btn-block text-center" translate="login.resetPassword"></button>
-                </fieldset>
-            </form>
-            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title text-center" translate="login.forgotPassword"></h4>
+                </div>
+                <div class="panel-body">
+                    <form ng-submit="resetPassword()" accept-charset="utf-8">
+                        <fieldset>
+                            <div class="form-group">
+                                <input class="form-control" ng-model="user.email" name="email" type="email"
+                                       required="required" placeholder="{{ 'login.email' | translate }}">
+                            </div>
+                            <button type="submit" class="btn btn-primary btn-block text-center"
+                                    translate="login.resetPassword"></button>
+                        </fieldset>
+                    </form>
+                </div>
 
-        </div>
+            </div>
         </div>
 
         <div class="col-md-4">
@@ -96,23 +100,26 @@
                             <p translate="login.register.line2"></p>
                             <p translate="login.register.line3"></p>
                         </li>
-                     </ul>
-            <form ng-submit="registerUser()" accept-charset="utf-8" id="registrationForm">
-                <fieldset>
-                   <!-- <div class="form-group">
-                        <input ng-model="user.email" name="email" type="email" required="required" placeholder="{{ 'login.form.email' | translate }}">
-                    </div>-->
-                    <div class="form-group">
-                        <button type="submit" id="registrationButton" class="btn btn-primary btn-block text-center" translate="login.register.title"></button>
-                    </div>
-                </fieldset>
-            </form>
-            <button type="button" class="btn btn-info btn-block little-padding text-center" ui-sref="tos" translate="login.tos"></button>
-        </div>
+                    </ul>
+                    <form ng-submit="registerUser()" accept-charset="utf-8" id="registrationForm">
+                        <fieldset>
+                            <!-- <div class="form-group">
+                                 <input ng-model="user.email" name="email" type="email" required="required" placeholder="{{ 'login.form.email' | translate }}">
+                             </div>-->
+                            <div class="form-group">
+                                <button type="submit" id="registrationButton"
+                                        class="btn btn-primary btn-block text-center"
+                                        translate="login.register.title"></button>
+                            </div>
+                        </fieldset>
+                    </form>
+                    <button type="button" class="btn btn-info btn-block little-padding text-center" ui-sref="tos"
+                            translate="login.tos"></button>
+                </div>
 
             </div>
         </div>
-        <div class ="panel-body"></div>
+        <div class="panel-body"></div>
     </div>
 </div>
 
