--- a/src/main/webapp/scripts/app/account/groups/list/list.html
+++ b/src/main/webapp/scripts/app/account/groups/list/list.html
@@ -9,8 +9,11 @@
         </tbody>
         <tbody class="items">
             <tr ng-repeat="group in userGroups">
-                <td>
+                <td ng-if="group.publicGroup || (!group.publicGroup && group.member)">
                     <a ui-sref="groupStatus({ groupId: group.groupId })">{{ group.name }}</a>
+                </td>
+                <td ng-if="!group.publicGroup && !group.member">
+                    <a ui-sref="privateGroup({ groupId: group.groupId })">{{ group.name }}</a>
                 </td>
                 <td>
                     <span ng-show="group.publicGroup && !group.archivedGroup" class="label labelSizeNormal label-warning" translate="account.groups.public"></span>
@@ -22,12 +25,19 @@
                 </td>
                 <td>
                         <span ng-if="group.administrator">
-                            <button type="button" ui-sref="manage({ groupId: group.groupId })" class="pull-right btn btn-primary hidden-phone">
+                            <button type="button" ui-sref="manage({ groupId: group.groupId })"
+                                    class="pull-right btn btn-primary hidden-phone">
                                 <span class="glyphicon glyphicon-th-large"></span>
                                 <span translate="account.groups.manage"></span>
                             </button>
                         </span>
-                    <button type="button" ng-if="!group.administrator" ng-click="joinLeaveGroup(group)" ng-init="hover = false" ng-mouseenter="hover = true" ng-mouseleave="hover = false" class="btn btn-sm pull-right" ng-class="{ 'btn-danger': group.member && hover, 'btn-info': group.member && !hover }">
+                    <button type="button" ng-if="(!group.administrator && group.publicGroup) || (!group.administrator && !group.publicGroup && group.member)"
+                            ng-click="joinLeaveGroup(group)"
+                            ng-init="hover = false"
+                            ng-mouseenter="hover = true"
+                            ng-mouseleave="hover = false"
+                            class="btn btn-sm pull-right"
+                            ng-class="{ 'btn-danger': group.member && hover, 'btn-info': group.member && !hover }">
                             <span class="glyphicon" ng-class="group.member ? 'glyphicon-minus' : 'glyphicon-plus'">
                                 <span ng-if="!group.member" class="hidden-phone" translate="account.groups.join"></span>
                                 <span ng-if="group.member && !hover" class="hidden-phone" translate="account.groups.joined"></span>
