--- a/src/main/webapp/scripts/app/shared/status/list/tatamiStatusList.html
+++ b/src/main/webapp/scripts/app/shared/status/list/tatamiStatusList.html
@@ -21,8 +21,8 @@
                             <h5 class="statusitem-name">
                                 <small ng-if="status.type == 'SHARE'">
                                     <span class="glyphicon glyphicon-retweet">&nbsp;</span>
-                                    <a ui-sref="ProfileStatuses({ email: status.email })">
-                                        <span class="text-muted">@{{ status.sharedByEmail }}</span>
+                                    <a ui-sref="profileStatuses({ email: status.sharedByUsername })">
+                                        <span class="text-muted">@{{ status.sharedByUsername }}</span>
                                     </a>
                                     <span translate="status.shared"></span>
                                     <br>
