Added support for company timeline

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -253,6 +253,7 @@
     <script src="scripts/app/shared/filters/MarkdownFilter.js"></script>
     <script src="assets/js/marked/marked.js"></script>
     <script src="scripts/app/shared/configs/MarkedConfig.js"></script>
+    <script src="scripts/app/home/timeline/company/company.js"></script>
     <script src="scripts/app/home/timeline/timeline/timeline.js"></script>
     <script src="scripts/app/home/timeline/mentions/mentions.js"></script>
     <script src="scripts/app/home/timeline/favorites/favorites.js"></script>
