Added support for replies on conversation page

--- a/src/main/webapp/scripts/app/home/status/status.html
+++ b/src/main/webapp/scripts/app/home/status/status.html
@@ -5,7 +5,7 @@
                 <div id="current" ng-mouseenter="showButtonRow = true" ng-mouseleave="showButtonRow = false">
                     <div ng-class="{ 'favorite': status.favorite, 'share': status.shareByMe, 'both': status.favorite && status.shareByMe }">
                         <div class="pull-left background-image-fffix statusitem-img">
-                            <a ui-sref="tatami.home.profile.statuses({ email: status.email })">
+                            <a ui-sref="profileStatuses({ email: status.email })">
                                 <div class="img img-rounded img-medium" ng-style="{ 'background-image': 'url(' + status.avatarURL + ')' }"></div>
                             </a>
                         </div>
@@ -13,23 +13,23 @@
                             <h5 class="statusitem-name">
                                 <small ng-if="status.type == 'SHARE'">
                                     <span class="glyphicon glyphicon-retweet">&nbsp;</span>
-                                    <a ui-sref="tatami.home.profile.statuses({ email: status.email })">
-                                        <span class="text-muted">@{{ status.sharedByEmail }}</span>
+                                    <a ui-sref="profileStatuses({ email: status.sharedByUsername })">
+                                        <span class="text-muted">@{{ status.sharedByUsername }}</span>
                                     </a>
-                                    <span translate="home.status.shared"></span>
+                                    <span translate="status.shared"></span>
                                     <br>
                                 </small>
                                 <span ng-if="status.type == 'MENTION_SHARE'" class="glyphicon glyphicon-retweet">&nbsp;</span>
                                 <span ng-if="status.type == 'MENTION_FRIEND'" class="glyphicon glyphicon-user">&nbsp;</span>
-                                <a ui-sref="tatami.home.profile.statuses({ email: status.email })">
+                                <a ui-sref="profileStatuses({ email: status.username })">
                                     <strong>{{ status.firstName + ' ' + status.lastName }}</strong>
                                     <small>@{{ status.username }}</small>
                                 </a>
-                                <span ng-if="status.type == 'MENTION_SHARE'" translate="home.status.sharedYour"></span>
-                                <span ng-if="status.type == 'MENTION_FRIEND'" translate="home.status.followed"></span>
+                                <span ng-if="status.type == 'MENTION_SHARE'" translate="status.sharedYour"></span>
+                                <span ng-if="status.type == 'MENTION_FRIEND'" translate="status.followed"></span>
                                 <small> · </small>
                                 <!-- Replace hover title with hover bubble -->
-                                <a ui-sref="tatami.home.status({ statusId: status.statusId })">
+                                <a ui-sref="status({ statusId: status.statusId })">
                                     <!--English-->
                                     <small ng-if="!isOneDayOrMore(status.statusDate) && getLanguageKey() == 'en'" title="{{ status.statusDate | amDateFormat:'h:mm A - D MMM YYYY' }}" am-time-ago="status.statusDate"></small>
                                     <small ng-if="isOneDayOrMore(status.statusDate) && getLanguageKey() == 'en'" title="{{ status.statusDate | amDateFormat:'h:mm A - D MMM YYYY' }}">{{ status.statusDate | amDateFormat:'MMM D' }}</small>
@@ -43,7 +43,7 @@
                             <div class="markdown" ng-class="{ 'mention-share': status.type == 'MENTION_SHARE' }" ng-bind-html="status.content | emoticon | markdown"></div>
 
                             <small ng-if="status.groupId">
-                                <a class="label" ng-class="{ 'label-info': !status.publicGroup, 'label-warning': status.publicGroup }" ui-sref="tatami.home.home.group.statuses({ groupId: status.groupId })">
+                                <a class="label" ng-class="{ 'label-info': !status.publicGroup, 'label-warning': status.publicGroup }" ui-sref="groupStatus({ groupId: status.groupId })">
                                 {{ status.groupName }}
                                 </a>
                                 <br>
@@ -51,27 +51,27 @@
 
                             <small ng-if="status.statusPrivate">
                                 <span class="glyphicon glyphicon-lock"></span>
-                                <span translate="home.status.private"></span>
+                                <span translate="status.private"></span>
                                 <br>
                             </small>
 
                             <small ng-if="status.type === 'ANNOUNCEMENT'">
                                 <span class="glyphicon glyphicon-bullhorn"></span>
-                                    {{ 'home.status.isAnnounced' | translate }}
-                                <a ui-sref="tatami.home.status({ statusId: status.sharedByUsername })">@{{ status.sharedByUsername }}</a>
+                                <span translate="status.isAnnounced"></span>
+                                <a ui-sref="status({ statusId: status.sharedByUsername })">@{{ status.sharedByUsername }}</a>
                             </small>
 
                             <small ng-if="status.replyTo && status.type !== 'ANNOUNCEMENT'">
                                 <span class="glyphicon glyphicon-share-alt"></span>
-                                <span translate="home.status.replyTo"></span>
-                                <a ui-sref="tatami.home.status({ statusId: status.replyTo })">@{{ status.replyToUsername }}</a>
+                                <span translate="status.replyTo"></span>
+                                <a ui-sref="status({ statusId: status.replyTo })">@{{ status.replyToUsername }}</a>
                                 <br>
                             </small>
 
                             <small ng-if="!status.activated && status.type !== 'ANNOUNCEMENT'">
                                 <div class="badge hidden-phone progress-bar-danger">
                                     <span class="glyphicon glyphicon-off"></span>
-                                    <span translate="tatami.account.users.deactivated"></span>
+                                    <span translate="account.users.deactivated"></span>
                                 </div>
                             </small>
 
@@ -79,8 +79,8 @@
                                 <div class="attachments">
                                     <div>
                                         <span ng-repeat="attachment in status.attachments">
-                                        <a href="/tatami/file/{{ attachment.attachmentId }}/{{ attachment.filename }}" class="btn-link status-action" target="_blank">
-                                        <i class="glyphicon glyphicon-file"></i> {{ attachment.filename }}
+                                        <a ng-href="/tatami/file/{{ attachment.attachmentId }}/{{ attachment.filename }}" class="btn-link status-action" target="_blank">
+                                            <i class="glyphicon glyphicon-file"></i> {{ attachment.filename }}
                                         </a>
                                         </span>
                                     </div>
@@ -91,7 +91,7 @@
                                     <span class="badge">{{ status.shares.length }}</span>
                                     <div>
                                         <span ng-repeat="user in status.shares">
-                                            <a ui-sref="tatami.home.profile.statuses({ email: user.email })">
+                                            <a ui-sref="profileStatuses({ email: user.email })">
                                                 <div class="img img-rounded img-small share-img-fffix" ng-attr-title="@{{ user.username }}" ng-style="{ 'background-image': 'url(' + user.avatarURL + ')' }"></div>
                                             </a>
                                         </span>
@@ -104,30 +104,30 @@
                             <div>
                                 <small class="statusitem-footer">
                                     <span>
-                                        <button ng-click="openReplyModal(status)" class="btn-link status-action status-action-reply button-ios">
+                                        <button ng-click="openReplyModal(status.statusId)" class="btn-link status-action status-action-reply button-ios">
                                             <i class="glyphicon glyphicon-comment"></i>
-                                            <span translate="home.status.reply"></span>
+                                            <span translate="status.reply"></span>
                                         </button>
                                         <button ng-if="status.username != profile.username && !status.shareByMe && !status.statusPrivate" ng-click="shareStatus(status, $index)" class="btn-link status-action status-action-share button-ios">
                                             <i class="glyphicon glyphicon-retweet"></i>
-                                            <span translate="home.status.share"></span>
+                                            <span translate="status.share"></span>
                                         </button>
                                         <button ng-click="favoriteStatus(status, $index)" class="btn-link status-action status-action-favorite button-ios">
                                             <i class="glyphicon glyphicon-star"></i>
-                                            <span translate="home.status.favorite"></span>
+                                            <span translate="status.favorite"></span>
                                         </button>
-                                        <button ng-if="isAdmin && status.groupId === null" ng-click="announceStatus(status)" class="btn-link status-action status-action-announce button-ios">
+                                        <button ng-if="$state.isAdmin && status.groupId === null" ng-click="announceStatus(status)" class="btn-link status-action status-action-announce button-ios">
                                             <i class="glyphicon glyphicon-bullhorn"></i>
-                                            <span translate="home.status.announce"></span>
+                                            <span translate="status.announce"></span>
                                         </button>
-                                        <button ng-if="status.username == profile.username" ng-click="deleteStatus(status, $index, ('tatami.status.confirmDelete' | translate))" class="btn-link status-action status-action-delete button-ios">
+                                        <button ng-if="status.username == profile.username" ng-click="deleteStatus(status, $index, ('status.confirmDelete' | translate))" class="btn-link status-action status-action-delete button-ios">
                                             <i class="glyphicon glyphicon-trash"></i>
-                                            <span translate="home.status.delete"></span>
+                                            <span translate="status.delete"></span>
                                         </button>
                                     </span>
                                     <span ng-if="status.replyTo" class="pull-right">
-                                        <a ui-sref="tatami.home.status({ statusId: status.statusId })" class="btn-link status-action button-ios">
-                                            <span translate="home.status.viewConversation"></span>
+                                        <a ui-sref="status({ statusId: status.statusId })" class="btn-link status-action button-ios">
+                                            <span translate="status.viewConversation"></span>
                                         </a>
                                     </span>
                                 </small>
