--- a/src/main/webapp/scripts/app/shared/status/list/tatamiStatusList.html
+++ b/src/main/webapp/scripts/app/shared/status/list/tatamiStatusList.html
@@ -7,7 +7,7 @@
         </div>
     </section>
     <section class="timeline" infinite-scroll="requestOldStatuses()" infinite-scroll-disabled="busy">
-        <div class="tatams" ng-repeat="status in statuses">
+        <div class="tatams" ng-repeat="status in statuses" ng-init="displayGeoLocInfo(status, $index)">
             <div class="tatam pointer tatam-border-lr tatam-hover" style="display: block;">
                 <div id="current" ng-mouseenter="showButtonRow = true" ng-mouseleave="showButtonRow = false">
 
@@ -45,7 +45,10 @@
                                     <small ng-if="!isOneDayOrMore(status.statusDate) && getLanguageKey() == 'fr'" title="{{ status.statusDate | amDateFormat:'HH:mm - D MMMM YYYY' }}" am-time-ago="status.statusDate"></small>
                                     <small ng-if="isOneDayOrMore(status.statusDate) && getLanguageKey() == 'fr'" title="{{ status.statusDate | amDateFormat:'HH:mm - D MMMM YYYY' }}">{{ status.statusDate | amDateFormat:'D MMMM' }}</small>
                                 </a>
-                                <a ng-if="status.locationURL" class="glyphicon glyphicon-map-marker" ng-href="{{ status.locationURL }}" target="_blank"></a>
+                                <a ng-if="status.locationURL" ng-href="{{ status.locationURL }}" target="_blank">
+                                    <span class="glyphicon glyphicon-map-marker"></span>
+                                    <small>{{status.locationDetails}}</small>
+                                </a>
                             </h5>
 
                             <div class="markdown" ng-class="{ 'mention-share': status.type == 'MENTION_SHARE' }" ng-bind-html="status.content | emoticon | markdown"></div>
