Add a menu option under a status that shows a popover menu to delete a status, and reporting user options

--- a/mobile/www/app/shared/status/status.html
+++ b/mobile/www/app/shared/status/status.html
@@ -1,3 +1,4 @@
+<script src="lib/ionic/release/js/ionic.bundle.js"></script>
 <span>
     <div class="item-avatar item-text-wrap tatami-avatar">
         <img ng-src="{{ vm.status.avatarURL }}"/>
@@ -39,7 +40,9 @@
     <div class="row">
         <div class="col-25 button button-clear ion-chatbox tatami-button" ng-click="vm.postReply()"></div>
         <div class="col-25 button button-clear ion-star tatami-button" ng-click="vm.favorite()" ng-class="{ 'button-energized': vm.status.favorite }"></div>
-        <div class="col-25 button button-clear ion-trash-a tatami-button" ng-if="vm.isCurrentUser" ng-click="vm.remove()"></div>
         <div class="col-25 button button-clear ion-share tatami-button" ng-if="!vm.isCurrentUser" ng-click="vm.shareStatus()" ng-class="{ 'button-royal': vm.status.shareByMe }"></div>
+        <div class="col-25 button button-clear ion-more tatami-button" ng-click="popover.show($event)"></div>
     </div>
 </span>
+
+
