more options only visible if not own status, move share button to more options

--- a/mobile/www/app/shared/status/blockUserMenu.html
+++ b/mobile/www/app/shared/status/blockUserMenu.html
@@ -1,6 +1,9 @@
 <ion-popover-view>
     <ion-content>
         <div class="list" ng-click="popover.hide()">
+            <a class="button button-clear ion-share tatami-button" ng-click="vm.shareStatus()" ng-class="{ 'button-royal': vm.status.shareByMe }">
+                Share Status
+            </a>
             <a class="item" target="_blank" translate="status.block.reportStatus">
                 Report Post
             </a>
@@ -10,8 +13,9 @@
             <a class="item" target="_blank" translate="status.block.blockUser">
                 Hide User from Timeline
             </a>
+
             <a class="button button-clear ion-trash-a tatami-button"
-               ng-if="vm.isCurrentUser" ng-click="vm.remove()">
+               ng-if="vm.isCurrentUser = 'ADMIN'" ng-click="vm.remove()">
                 Delete
             </a>
         </div>
