A User can now block another User and not see its statuses anymore. This features needs to use the updated backend (from the jhipster branch)

--- a/mobile/www/app/shared/status/blockUserMenu.html
+++ b/mobile/www/app/shared/status/blockUserMenu.html
@@ -10,7 +10,7 @@
             <a class="item" target="_blank" translate="status.block.reportUser">
                 Report User
             </a>
-            <a class="item" target="_blank" translate="status.block.blockUser">
+            <a class="item" target="_blank" translate="status.block.blockUser" ng-click="vm.blockUser()">
                 Hide User from Timeline
             </a>
 
