--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -70,6 +70,7 @@
         <script src="app/shared/services/path.service.js"></script>
         <script src="app/shared/services/localStorage.service.js"></script>
         <script src="app/shared/services/tag.service.js"></script>
+        <script src="app/shared/services/block.service.js"></script>
 
         <script src="app/shared/state/profile/profile.controller.js"></script>
         <script src="app/shared/state/conversation/conversation.controller.js"></script>
