Changed the path to images so that it is compatible with the mobile/mastre branch.

--- a/src/main/webapp/scripts/app/home/presentation/welcome.html
+++ b/src/main/webapp/scripts/app/home/presentation/welcome.html
@@ -12,7 +12,7 @@
         <div class="modal-body">
             <div class="row">
                 <div class="col col-span6">
-                    <img src="/assets/images/welcome.jpg" class="pull-left">
+                    <img src="/assets/img/welcome.jpg" class="pull-left">
                 </div>
                 <div class="col col-span6">
                     <br>
