--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -45,6 +45,8 @@
         <script src="app/components/home/more/more.controller.js"></script>
         <script src="app/components/home/more/company/company.timeline.js"></script>
         <script src="app/components/home/more/company/company.timeline.controller.js"></script>
+        <script src="app/components/home/more/settings/settings.js"></script>
+        <script src="app/components/home/more/settings/settings.controller.js"></script>
 
         <script src="app/components/follow/follow.js"></script>
         <script src="app/components/follow/suggested/suggested.js"></script>
