Create the state for managing the blocked-users state as a substate of more.

--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -47,6 +47,8 @@
         <script src="app/components/home/more/company/company.timeline.controller.js"></script>
         <script src="app/components/home/more/settings/settings.js"></script>
         <script src="app/components/home/more/settings/settings.controller.js"></script>
+        <script src="app/components/home/more/blocked_users/blocked.users.js"></script>
+        <script src="app/components/home/more/blocked_users/blocked.users.controller.js"></script>
 
         <script src="app/components/follow/follow.js"></script>
         <script src="app/components/follow/suggested/suggested.js"></script>
