Follow button doesn't appear on your own profile.

--- a/mobile/www/app/shared/state/profile/profile.html
+++ b/mobile/www/app/shared/state/profile/profile.html
@@ -1,6 +1,7 @@
 <ion-view view-title="@{{ vm.user.username }}">
     <ion-nav-buttons side="secondary">
         <button class="button ion-person-add"
+                ng-if="!vm.isCurrentUser"
                 ng-class="{ 'button-calm' : vm.user.friend, 'button-stable button-outline' : !vm.user.friend }"
                 style="font-size: 30px;"
                 ng-click="vm.followUser()"></button>
